revert xss patch; brakes on macos+firefox at least

--- a/example.html
+++ b/example.html
@@ -11,6 +11,7 @@
 -->
 <html>
     <head>
+        <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     	<title> Example of usage: jQuery AS3 Webcam </title>
         <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     	<script type="text/javascript" src="jquery.webcam.as3.js"></script>
