switch to lightweight zeptojs instead of jquery; use proper xss check when calling ExternalInterface.call

--- a/example.html
+++ b/example.html
@@ -13,7 +13,8 @@
     <head>
         <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     	<title> Example of usage: jQuery AS3 Webcam </title>
-        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+        <!--<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>-->
+        <script type="text/javascript" src="http://zeptojs.com/zepto.min.js"></script>
     	<script type="text/javascript" src="jquery.webcam.as3.js"></script>
         <style type="text/css">
             .webcam-container {padding:0;margin:0}
